fixed vertical alignment

--- a/src/style.css
+++ b/src/style.css
@@ -12,12 +12,14 @@ h1 {
   font-family: "Raleway", sans-serif;
   font-weight: 400;
   font-size: 100px;
+  margin-top: 100px;
+  margin-bottom: 0;
 }
 
-h2,
-h3 {
+h2 {
   font-family: "Nunito", sans-serif;
   font-weight: 200;
+  margin-top: 0;
 }
 
 a {
@@ -41,13 +43,27 @@ a:hover {
 }
 
 .cv-button {
-  justify-content: center;
-  display: flex;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+  width: 150px;
 }
 
 .project-image {
   width: 500px;
   border-radius: 20px;
+  box-shadow: 0px 10px 50px var(--second-color);
+}
+.projects {
   display: flex;
   justify-content: space-evenly;
+}
+
+iframe {
+  vertical-align: middle;
+}
+.about-button {
+  display: inline;
+  margin: 20px;
+  vertical-align: middle;
 }
